--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ evn:
   - ANSIBLE_VERSION=1.9.2
 
 before_install:
-  - apt-get update -qq
+  - sudo apt-get update -qq
 
 install:
   - pip install ansible=$ANSIBLE_VERSION
