--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@
 language: python
 python: "2.7"
 
-evn:
+env:
   - ANSIBLE_VERSION=1.9.2
 
 before_install:
   - sudo apt-get update -qq
 
 install:
-  - pip install ansible==1.9.2
+  - pip install ansible==$ANSIBLE_VERSION
 
 script:
   - "which ansible"
+  
