--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,24 @@
 ---
+- name: Load OS specific variables 
+  include_vars: "{{ ansible_distribution }}.yml"
+
 - name: Install Zabbix GPG key
   apt_key: url='http://repo.zabbix.com/zabbix-official-repo.key' state=present
 
-- name: Setup official Zabbix Debian repository
-  apt_repository:
-    repo='deb http://repo.zabbix.com/zabbix/{{ zabbix_version }}/debian {{ ansible_distribution_release }} main'
-    state=present
+- include: Debian.yml
+  when: ansible_distribution == 'Debian'
 
 - name: Install zabbix-agent package
   apt: name=zabbix-agent update_cache=yes state=present
+
+- name: Setup zabbix-agentd configuration file
+  template: >
+    src=zabbix_agentd.conf.j2
+    dest=/etc/zabbix/zabbix_agentd.conf
+    owner=root
+    group=root
+    mode=0644
+  notify: restart zabbix agent daemon
+
+- name: Setup zabbix-agentd service
+  service: name=zabbix-agent state=started enabled=yes
