--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 
 install:
   - pip install ansible==$ANSIBLE_VERSION
-  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> tests/ansible.cfg"
+  - "{ echo '[defaults]'; echo 'roles_path = ../../'; } > ansible.cfg"
 
 script:
   - "ansible --version"
